# Nexus-LLM

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  docker-compose.yml  download_model.py  main.py  push_to_github.sh  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  run_benchmark.py  run_chat.py  run_eval.py  run_server.py  run_train.py  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  ci.yml  dependabot.yml  lint.yml  test.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  test.yml
backend/: __init__.py  inference.py  model_manager.py  server.py  tokenizer_utils.py
config/: __init__.py  auth_config.yaml  default_config.yaml  model_config.yaml  monitoring_config.yaml  rag_config.yaml  safety_config.yaml  settings.py
config/agents/: default_agents.yaml
config/experiments/: experiment_000.yaml  experiment_001.yaml  experiment_002.yaml  experiment_003.yaml  experiment_004.yaml  experiment_005.yaml  experiment_006.yaml  experiment_007.yaml  experiment_008.yaml  experiment_009.yaml  experiment_010.yaml  experiment_011.yaml  experiment_012.yaml  experiment_013.yaml  experiment_014.yaml  experiment_015.yaml  experiment_016.yaml  experiment_017.yaml  experiment_018.yaml  experiment_019.yaml  experiment_020.yaml  experiment_021.yaml  experiment_022.yaml  experiment_023.yaml  experiment_024.yaml  experiment_025.yaml  experiment_026.yaml  experiment_027.yaml  experiment_028.yaml  experiment_029.yaml
config/presets/: chat_presets.yaml  code_presets.yaml  creative_presets.yaml  custom_preset_000.yaml  custom_preset_001.yaml  custom_preset_002.yaml  custom_preset_003.yaml  custom_preset_004.yaml  custom_preset_005.yaml  custom_preset_006.yaml  custom_preset_007.yaml  custom_preset_008.yaml  custom_preset_009.yaml  custom_preset_010.yaml  custom_preset_011.yaml  custom_preset_012.yaml  custom_preset_013.yaml  custom_preset_014.yaml  custom_preset_015.yaml  custom_preset_016.yaml  custom_preset_017.yaml  custom_preset_018.yaml  custom_preset_019.yaml  custom_preset_020.yaml  custom_preset_021.yaml  custom_preset_022.yaml  custom_preset_023.yaml  custom_preset_024.yaml  custom_preset_025.yaml  custom_preset_026.yaml  custom_preset_027.yaml  custom_preset_028.yaml  custom_preset_029.yaml  custom_preset_030.yaml  custom_preset_031.yaml  custom_preset_032.yaml  custom_preset_033.yaml  custom_preset_034.yaml  custom_preset_035.yaml  custom_preset_036.yaml  (+63 more)
config/training/: chat_training.yaml  code_training.yaml  (+8 more)
configs/: base_100b.yaml
data/: eval_data.jsonl  prompt_templates.json  sample_conversations.json  training_data.jsonl
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  MODELS.md  SECURITY.md  TRAINING.md  TROUBLESHOOTING.md
examples/: advanced_example_000.py  advanced_example_001.py  advanced_example_002.py  advanced_example_003.py  advanced_example_004.py  advanced_example_005.py  advanced_example_006.py  advanced_example_007.py  advanced_example_008.py  advanced_example_009.py  advanced_example_010.py  advanced_example_011.py  advanced_example_012.py  advanced_example_013.py  advanced_example_014.py  advanced_example_015.py  advanced_example_016.py  advanced_example_017.py  advanced_example_018.py  advanced_example_019.py  advanced_example_020.py  advanced_example_021.py  advanced_example_022.py  advanced_example_023.py  advanced_example_024.py  advanced_example_025.py  advanced_example_026.py  advanced_example_027.py  advanced_example_028.py  advanced_example_029.py  agent_example.py  alignment_example.py  api_client_example.py  auth_example.py  basic_chat.py  benchmark_example.py  chain_example.py  chain_of_thought.py  custom_prompt.py  custom_tool.py  (+20 more)
nexus_llm/: __init__.py  __main__.py  __version__.py  app.py  cli.py  config_loader.py  constants.py  context.py  enums.py  events.py  exceptions.py  plugins.py  registry.py  signals.py  state.py  types.py
notebooks/: 01_getting_started.ipynb  02_fine_tuning.ipynb  03_rag_pipeline.ipynb  04_evaluation.ipynb  05_custom_agents.ipynb  notebook_06.ipynb  notebook_07.ipynb  notebook_08.ipynb  notebook_09.ipynb  notebook_10.ipynb  notebook_11.ipynb  notebook_12.ipynb  notebook_13.ipynb  notebook_14.ipynb  notebook_15.ipynb  notebook_16.ipynb  notebook_17.ipynb  notebook_18.ipynb  notebook_19.ipynb  notebook_20.ipynb  notebook_21.ipynb  notebook_22.ipynb  notebook_23.ipynb  notebook_24.ipynb  notebook_25.ipynb  notebook_26.ipynb  notebook_27.ipynb  notebook_28.ipynb  notebook_29.ipynb  notebook_30.ipynb  notebook_31.ipynb  notebook_32.ipynb  notebook_33.ipynb
scripts/: __init__.py  benchmark.sh  clean.sh  download_model.py  download_models.sh  eval.py  infer.py  install.bat  install.sh  run.sh  serve.py  setup_env.sh  start.bat  start.sh  tokenize.py  train.py  train.sh  update.sh
terminal/: __init__.py  chat.py  commands.py  formatter.py  history.py
tests/: __init__.py  conftest.py  test_adafactor_optimizer.py  test_adamw_optimizer.py  test_adapter.py  test_adapter_model.py  test_agent_integration.py  test_agent_memory.py  test_agents.py  test_agents_config.py  test_alignment.py  test_ansi.py  test_ansi_strip.py  test_api_client.py  test_api_integration.py  test_api_tool.py  test_app.py  test_async_client.py  test_async_io.py  test_async_streamer.py  test_augmentation.py  test_auth.py  test_autocomplete.py  test_background_worker.py  test_base_agent.py  test_base_model.py  test_base_tool.py  test_batch_client.py  test_batch_generation.py  test_beam_search.py  test_benchmark.py  test_benchmarks.py  test_bounce_spinner.py  test_bracket_match.py  test_builtin_plugins.py  test_bytes_format.py  test_cache.py  test_cache_decorator.py  test_calculator_tool.py  test_callback_streamer.py  (+324 more)
training/: __init__.py  dataset.py  fine_tune.py  trainer.py
utils/: __init__.py  helpers.py  logger.py
(+1032 files in other folders)
