[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-llm"
version = "0.1.0"
description = "A powerful LLM framework for training, serving, and chatting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nexus-LLM Team", email = "nexus-llm@example.com"},
]
maintainers = [
    {name = "Nexus-LLM Team", email = "nexus-llm@example.com"},
]
keywords = ["llm", "nlp", "machine-learning", "deep-learning", "transformers", "chat", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "datasets>=2.14.0",
    "tokenizers>=0.14.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "safetensors>=0.4.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
gpu = [
    "xformers>=0.0.22",
    "flash-attn>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
    "auto-gptq>=0.6.0",
    "optimum>=1.14.0",
]
all = [
    "nexus-llm[gpu,dev,quantization]",
]

[project.scripts]
nexus-llm = "main:main"
nexus = "main:main"

[project.urls]
Homepage = "https://github.com/nexus-llm/nexus-llm"
Documentation = "https://nexus-llm.readthedocs.io"
Repository = "https://github.com/nexus-llm/nexus-llm"
"Bug Tracker" = "https://github.com/nexus-llm/nexus-llm/issues"
Changelog = "https://github.com/nexus-llm/nexus-llm/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {exclude = ["tests", "tests.*", "docs", "examples"]}}

[tool.setuptools.package-data]
nexus_llm = ["py.typed"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["nexus_llm"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["nexus_llm"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "B008"]
