[metadata]
name = nexus-llm
version = 0.1.0
author = Nexus-LLM Team
author_email = nexus-llm@example.com
description = A powerful LLM framework for training, serving, and chatting
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/nexus-llm/nexus-llm
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = llm nlp machine-learning deep-learning transformers chat training
project_urls =
    Bug Tracker = https://github.com/nexus-llm/nexus-llm/issues
    Documentation = https://nexus-llm.readthedocs.io
    Source Code = https://github.com/nexus-llm/nexus-llm

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.0.0
    transformers>=4.35.0
    accelerate>=0.24.0
    peft>=0.6.0
    datasets>=2.14.0
    tokenizers>=0.14.0
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    websockets>=12.0
    click>=8.1.0
    rich>=13.0.0
    prompt-toolkit>=3.0.0
    pyyaml>=6.0
    requests>=2.31.0
    tqdm>=4.66.0
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.3.0
    matplotlib>=3.7.0
    safetensors>=0.4.0
    scipy>=1.11.0

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    examples

[options.entry_points]
console_scripts =
    nexus-llm = main:main
    nexus = main:main

[options.extras_require]
gpu =
    xformers>=0.0.22
    flash-attn>=2.3.0
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    flake8>=6.1.0
    mypy>=1.5.0
    isort>=5.12.0
    pre-commit>=3.5.0
quantization =
    bitsandbytes>=0.41.0
    auto-gptq>=0.6.0
    optimum>=1.14.0

[flake8]
max-line-length = 120
extend-ignore = E203, E501, W503
exclude = .git,__pycache__,build,dist,*.egg-info,.tox,.mypy_cache

[isort]
profile = black
line_length = 120
known_first_party = nexus_llm

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
asyncio_mode = auto
